# base-docs

./: .readthedocs.yaml  CHANGELOG.md  README.md  pyproject.toml  tasks.py
docs/: conf.py  index.rst  teste.rst
docs/_static/css/: main.css
docs/_static/js/: main.js
