[project]
name = "base-docs"
version = "0.6.0"
description = "Projeto base para documentações"
authors = [
    {name = "Igor Carvalho",email = "igbrch@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "sphinx (>=9.1.0,<10.0.0)",
    "sphinx-autobuild (>=2025.8.25,<2026.0.0)",
    "sphinx-rtd-theme (>=3.1.0,<4.0.0)"
]

[tool.poetry]
package-mode = false

[dependency-groups]
dev = [
    "black (>=25.12.0,<26.0.0)",
    "commitizen (>=4.11.6,<5.0.0)",
    "flake8-pyproject (>=1.2.4,<2.0.0)",
    "invoke (>=2.2.1,<3.0.0)",
    "isort (>=7.0.0,<8.0.0)"
]

[tool.poetry.group.dev]
optional = true

[tool.black]
line-length = 100
target-version = ['py314']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 100

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "semver2"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
version_files = ["pyproject.toml:project.version"]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"